--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  <style>
+    .toppad {
+  padding-top: 10px;
+}
+  </style>
 </head>
 
 <body>
@@ -48,9 +53,14 @@
   
   <!-- First section -->
   <section>
-    <div class="row">
-      <div class="col">
-        <h2>Club Objectives</h2>
+  
+    <div class="container toppad">
+      <div class="row">
+        <div class="col">
+        
+        </div>
+        <div class="width-800">
+          <h2>Club Objectives</h2>
         <p>
           The Club's goal is to create an educational project with innovative and interactive features and teaching
           methods that start with sports as a creative game.
@@ -63,7 +73,10 @@
           which ensures good adaptability to game situations.
         </p>
         <img src="/assets/images/gallery/Image01.jpg" alt="Club players" class="img-fluid">
-
+        </div>
+        <div class="col">
+        
+        </div>
       </div>
     </div>
   </section>
