removed some code from css

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       <div class="col">
       </div>
       <div class="col-6">
-        <form class="formular">
+        <form action="https://formdump.codeinstitute.net/" method="POST"  target="_blank" class="formular">
           <h2>Register your interest!</h2>
           <div class="mb-3">
             <label for="fname1" class="form-label">First name:</label>
