Changed form output and made h2 bold

--- a/contact.html
+++ b/contact.html
@@ -63,18 +63,18 @@
           <h2>Register your interest!</h2>
           <div class="mb-3">
             <label for="fname1" class="form-label">First name:</label>
-            <input type="text" class="form-control" id="fname" aria-describedby="fnameHelp">
+            <input type="text" class="form-control" id="fname" name="first-name" aria-describedby="fnameHelp">
             <div id="fnameHelp" class="form-text">Enter your First name.</div>
           </div>
           <div class="mb-3">
             <label for="lname1" class="form-label">Last name:</label>
-            <input type="text" class="form-control" id="lname" aria-describedby="lnameHelp">
+            <input type="text" class="form-control" id="lname" name="last-name" aria-describedby="lnameHelp">
             <div id="nameHelp" class="form-text">Enter your Last name.</div>
           </div>
     
           <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">Enter your email address.</div>
           </div>
     
