--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <hr>
 
   <!--Second section-->
-  <h2>News Section</h2>
+  <h2>News</h2>
   <section>
     <div class="row">
       <div class="col-sm-6">
