--- a/gallery.html
+++ b/gallery.html
@@ -59,52 +59,52 @@
 
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image01.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image01.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img01.jpg" alt="Club players">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image02.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image02.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img02.jpg" alt="Coach explaining tactics to players">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image03.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image03.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img03.jpg" alt="Alone player on the field">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image04.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image04.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img04.jpg" alt="Three players with a ball playing">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image05.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image05.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img05.jpg" alt="Grouped players posing for photo">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image06.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image06.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img06.jpg" alt="Coach sitting with players">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image07.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image07.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img07.jpg" alt="Coach drawing tactics">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image08.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image08.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img08.jpg" alt="Three players and a ball">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image09.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image09.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img09.jpg" alt="Players running on the football pitch">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="/assets/images/gallery/Image10.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/Image10.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="/assets/images/gallery/img10.jpg" alt="Goalkepeer getting ready">
         </a>
       </div>
 
