--- a/gallery.html
+++ b/gallery.html
@@ -59,22 +59,22 @@
 
       <div class="col-lg-3 col-md-4 col-6">
         <a href="./assets/images/gallery/img01.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="./assets/images/gallery/img01.jpg" alt="Club players">
+          <img class="img-fluid img-thumbnail" src="assets/images/gallery/img01.jpg" alt="Club players">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="./assets/images/gallery/img02.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="./assets/images/gallery/img02.jpg" alt="Coach explaining tactics to players">
+          <img class="img-fluid img-thumbnail" src="assets/images/gallery/img02.jpg" alt="Coach explaining tactics to players">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="./assets/images/gallery/img03.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="./assets/images/gallery/img03.jpg" alt="Alone player on the field">
+          <img class="img-fluid img-thumbnail" src="assets/images/gallery/img03.jpg" alt="Alone player on the field">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="./assets/images/gallery/img04.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="./assets/images/gallery/img04.jpg" alt="Three players with a ball playing">
+          <img class="img-fluid img-thumbnail" src="assets/images/gallery/img04.jpg" alt="Three players with a ball playing">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
