--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   <style>
     .formpad {
@@ -97,17 +100,15 @@
       width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="responsive-iframe"></iframe>
   </div>
 
-  <footer>
-    <div class="footer-background">
-        <ul class="footer-links">
-          <li><a href="https://www.fifa.com" target="_blank"><i class="fas fa-futbol"></i></li>
-          <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
-          <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
-          <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></li>
-          <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></li>
-        </ul>
-      </div>    
-  </footer>
+  <div class="footer-basic">
+    <footer>
+        <div class="social"><a href="http://www.instagram.com" target="_blank"><i class="icon ion-social-instagram"></i></a>
+          <a href="http://www.snapchat.com" target="_blank"><i class="icon ion-social-snapchat"></i></a>
+          <a href="http://www.twitter.com" target="_blank"><i class="icon ion-social-twitter"></i></a>
+          <a href="http://www.facebook.com" target="_blank"><i class="icon ion-social-facebook"></i></a>
+        </div>
+    </footer>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
