--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
   <style>
     .toppad {
   padding-top: 10px;
@@ -23,7 +27,7 @@
     <div class="col"><a href="index.html"><img src="assets/images/gallery/banner2.jpg" class="img-fluid" alt="FC-BT KIDS Banner  In pursuit of excellence"></a></div>
   </div>
 
-  </div>
+  
 
   <!-- Navbar section -->
 
@@ -126,18 +130,15 @@
 
 
 
-  <footer>
-    <div class="footer-background">
-        <ul class="footer-links">
-          <li><a href="https://www.fifa.com" target="_blank"><i class="fas fa-futbol"></i></li>
-          <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
-          <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
-          <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></li>
-          <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></li>
-        </ul>
-      </div>    
-  </footer>
-
+  <div class="footer-basic">
+    <footer>
+        <div class="social"><a href="http://www.instagram.com" target="_blank"><i class="icon ion-social-instagram"></i></a>
+          <a href="http://www.snapchat.com" target="_blank"><i class="icon ion-social-snapchat"></i></a>
+          <a href="http://www.twitter.com" target="_blank"><i class="icon ion-social-twitter"></i></a>
+          <a href="http://www.facebook.com" target="_blank"><i class="icon ion-social-facebook"></i></a>
+        </div>
+    </footer>
+</div>
 
 
 
