--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>FC BT-KIDS</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +27,7 @@
 <body>
   <!-- Banner section -->
   <div class="row">
-    <div class="col"><a href="index.html"><img src="assets/images/gallery/banner2.jpg" class="img-fluid" alt="FC-BT KIDS Banner  In pursuit of excellence"></a></div>
+    <div class="col"><a href="index.html"><img src="assets/images/gallery/Bannerr.jpg" class="img-fluid" alt="FC-BT KIDS Banner  In pursuit of excellence"></a></div>
   </div>
 
   
